# nwchem-lsp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .qwen-session  CHANGELOG.md  PARITY.md  PLAN.md  README.md  coverage.xml  index.md  log.md  lsp-capabilities.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.maintenance/: last-run.md
docs/: DIAGNOSTIC_ENGINE_V1.md  LLM-WIKI-PLAN.md  agent-verification-loop.md  architecture.md  index.md  openqc_evidence.md  testpypi-release.md
examples/: benzene_mp2.nw  ethanol_scf.nw  fe_scf_ecp.nw  h2o_freq.nw  methane_ccsd.nw  water_dft.nw  water_dft.nwinp
fixtures/: invalid_bad_functional.nw  invalid_missing_geometry.nw  invalid_unknown_operation.nw  invalid_unknown_theory.nw  manifest.json  valid_minimal.nw  valid_water_dft.nw  warning_unknown_basis.nw
raw/assets/: 3carbo_dft.nw  CHANGELOG.md  ccsd_polar_small.nw  h2o_scf.nw  manifest.json  nwchem_parser.py
reports/: docstring-wiki-raw-traceability.json
scripts/: check_docstring_traceability.py  format.sh  refresh_provenance_manifest.py  smoke_wheel.sh  verify_release.py
skill/: SKILL.md  skill.yaml
skill/references/: README.md
src/nwchem_lsp/: __init__.py  agent_lsp.py  agent_operations.py  exceptions.py  preflight.py  rich_diagnostics.py  server.py  skill_export.py  tool.py
src/nwchem_lsp/data/: __init__.py  keywords.py
src/nwchem_lsp/features/: __init__.py  agent_api.py  code_actions.py  completion.py  config.py  definition.py  diagnostic.py  diagnostics.py  folding_range.py  formatting.py  hover.py  inlay_hints.py  lint.py  references.py  regression.py  rename.py  semantic_tokens.py  symbols.py  test_runner.py  validation.py  validation_accuracy.py  workspace_symbols.py
src/nwchem_lsp/parser/: __init__.py  nwchem_parser.py
src/nwchem_lsp/utils/: __init__.py  (+1 more)
src/parsers/: nw.ts
tests/: __init__.py  conftest.py  test_basic.py  test_closed_loop_fix_previews.py  test_closed_loop_fixtures.py  test_diagnostics.py  test_docstring_traceability.py  test_fixture_diagnostics.py  test_formatting.py  test_keywords.py  test_parser_parity.py  test_preflight.py  test_provenance_manifest.py  test_release_contract.py  test_rich_diagnostics_contract.py  test_server.py  test_symbols.py  test_validation.py
tests/features/: test_agent_api.py  test_code_actions.py  test_completion.py  test_config.py  test_definition.py  test_diagnostic.py  test_folding_range.py  test_hover.py  test_inlay_hints.py  test_lint.py  test_references.py  test_regression.py  test_rename.py  test_semantic_tokens.py  test_test_runner.py  test_validation_accuracy.py  test_workspace_symbols.py
tests/integration/: test_edge_cases.py  test_example_files.py  test_more_examples.py
tests/lint/: duplicate_section.nw  duplicate_tasks.nw  geometry_malformed.nw  invalid_grid.nw  invalid_maxiter_string.nw  invalid_task_missing_operation.nw  invalid_units.nw  loose_convergence.nw  missing_required.nw  task_missing_operation.nw  unclosed_section.nw  unexpected_end.nw  unknown_basis.nw  unknown_directive.nw  unknown_functional.nw  unknown_keyword.nw  unknown_task_operation.nw  unknown_task_theory.nw  unusual_maxiter.nw  valid_input.nw
tests/parser/: test_nwchem_parser.py  test_real_world_fixtures.py
tests/parsers/: nw.test.ts
tests/validation/: __init__.py  duplicate_basis.nw  duplicate_task.nw  mp2_ccsd_conflict.nw  multiple_charge.nw  scf_dft_conflict.nw  task_section_conflict.nw  valid_input.nw
wiki/: index.md  log.md
wiki/concepts/: Basis_Set_Selection.md  Convergence_Control.md  Geometry_Input_Formats.md  Quantum_Chemistry_Methods.md  Spin_and_Multiplicity.md  diagnostic-engine-v1.md
wiki/entities/: Basis_Set.md  CCSD.md  Chemical_Elements.md  DFT.md  Diagnostic_System.md  ECP.md  Geometry_Section.md  LSP_Server.md  MP2.md  NWChem.md  SCF.md  Task_Operation.md  XC_Functional.md
wiki/synthesis/: Diagnostics_Catalog.md  Feature_Providers_API.md  NWChem_DSL_Reference.md  Parser_API.md  openqc-agent-context.md
(+17 files in other folders)
