[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nwchem-lsp"
version = "0.5.0"
description = "Language Server Protocol for NWChem input files (.nw, .nwinp)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pygls>=1.2.0,<2.0.0",
    "lsprotocol>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.0",
]

[project.scripts]
nwchem-lsp = "nwchem_lsp.server:main"
nwchem-lsp-tool = "nwchem_lsp.tool:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nwchem_lsp"]

[tool.hatch.build.targets.wheel.force-include]
"lsp-capabilities.json" = "nwchem_lsp/lsp-capabilities.json"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nwchem_lsp --cov-report=term-missing --cov-report=html --cov-report=xml -v"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["nwchem_lsp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "..."
]
